# BallsInBins

./: .gitignore  LICENSE  README.md  debug.ipynb  pyproject.toml
.github/workflows/: ci.yml
balls_in_bins/: simulation.py
balls_in_bins/_tests/: test_simulation.py
